--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;700&display=swap" rel="stylesheet">
 
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
     rel="stylesheet"
 />
-    <title>Document</title>
+    <title>WizardZ</title>
 </head>
 <body>
     <section class = "section1">
@@ -138,33 +139,41 @@
             </div>
 
         </div>
-        <div class="footer">
-            <div class="footerchild1">
-                <h1><i class="ri-shining-2-fill"></i>WizardZ</h1>
+        <div class="footerparent">
+            <div class="footer">
+
+                <div class="footerchild1">
+                    <h1>Relax. We've got you.</h1>
+                    <button>Take a seat</button>
+                </div>
+                <div class="footerchild2">
+                    <h2>
+                        @ 2024 
+                    </h2>
+                    <h2>
+                        WizardZ All rights reserved.
+                    </h2>
+                </div>
+                    <div class="footerchild3">
+                        <h1>
+                            EMAIL <br>
+                            xyz@gmail.com
+                        </h1>
+                       <h1>
+                        USA Office <br>
+                        2701 Homestead Road, Chapel Hill, North Carolina - 27516
+                       </h1>
+                        <h1>
+                            INDIA Office <br>
+                            127A/X, Kolazhy P O, Thrissur - 680010
+                        </h1>
+                    </div>
             </div>
-            <div class="footerchild2">
-                <h2>
-                    @ 2024 
-                </h2>
-                <h2>
-                    WizardZ All rights reserved.
-                </h2>
-            </div>
-            <div class="footerchild3">
-                <h1>
-                    EMAIL <br>
-                    xyz@gmail.com
-                </h1>
-               <h1>
-                USA Office <br>
-                2701 Homestead Road, Chapel Hill, North Carolina - 27516
-               </h1>
-                <h1>
-                    INDIA Office <br>
-                    127A/X, Kolazhy P O, Thrissur - 680010
-                </h1>
+            <div class="biglogo">
+                <h1>WizardZ</h1>
             </div>
         </div>
+
     </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
